--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -13,6 +13,8 @@
 	    android:layout_height="match_parent"
 	    android:layout_alignParentBottom="true"
 	    android:layout_alignParentLeft="true"
-	    android:layout_alignParentTop="true" />
+	    android:layout_alignParentRight="true"
+	    android:layout_alignParentTop="true" 
+	    android:padding="0dp"/>
 
 </RelativeLayout>
